--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Junjie Fei / Work in Progress"
+title                    : "Junjie Fei / Research Assistant"
 title_separator          : "-"
 name                     : &name "Junjie Fei"
 description              : &description "personal description"
