--- a/_config.yml
+++ b/_config.yml
@@ -83,7 +83,7 @@ author:
   name             : "Junjie Fei"
   avatar           : "profile.png"
   bio              : "Hi, this is my personal homepage!"
-  location         : "Jiddah, Saudi Arabia"
+  location         : "Burlingame, CA, USA" # "Thuwal, Saudi Arabia"
   employer         :
   pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   googlescholar    : "https://scholar.google.com/citations?hl=zh-CN&user=idH7-o0AAAAJ"
